Add some features:
- TUN for uplink ip message encapsulet to gtp and forward to gtp peer
- GTP Protocol is listenning and reading TEID (not forwarding to next
  peer yet, not performing desencapsulation yet)

--- a/config/upf1.yaml
+++ b/config/upf1.yaml
@@ -1,9 +1,6 @@
-classifier: true
-coreAddress: "127.0.0.1"
-coreGtpInterface: gtp2
-coreAction: forward
-accessAddress: "127.0.0.2"
-accessGtpInterface: gtp3
-accessAction: forward
-mecDecap: 
-
+entities:
+  - ipAddress: "10.0.10.2"
+ipEndpoints:
+  - gtpuPeer: "10.0.10.3"
+    TEID: 1
+    laddr: "10.0.10.2"
