--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -1,14 +1,19 @@
 entities:
   - ipAddress: "10.0.10.3" 
     pdrs:
-      - teid: 1
-        far:
-          - teid: 2
-            gtpuPeer: "10.0.20.2"
-      - teid: 3
-        far:
-          - teid: 4
-            gtpuPeer: "10.0.30.2"
+      - id: 1
+        teid: 1
+        farid: 1
+      - id: 2
+        teid: 3
+        farid: 2
+    fars:
+      - id: 1
+        teid: 2
+        gtpuPeer: "10.0.20.2"
+      - id: 2
+        teid: 4
+        gtpuPeer: "10.0.30.2"
 
   - ipAddress: "10.0.20.3" 
   - ipAddress: "10.0.30.3" 
