Add forwarding of GTP packets + desencapsulation
- Refactoring
- Save GTP Extension Headers and forward them (not tested)
- Config format closer of PFCP format
- Removal/Creation of GTP Outer Header (not tested)
- Remove infinite loops to avoid consumming CPU for nothing

Todo:
- Test with 3 GTPU-entities (priority: high)
  - Test with ipv6 (priority: low)
- Refactoring (priority: medium)
- Add support for every type of header (priority: low)
- PFCP Support (priority: medium)
  - PFCP client + test with f5gc/ueransim (goal))
  - Multiple PFCP Sessions (priority medium)
  - Apply instructions of MAR, QERs, URRs, etc. (priority: low)
  - Support for Flow Label Description (priority: medium)

--- a/config/upf1.yaml
+++ b/config/upf1.yaml
@@ -1,6 +1,16 @@
-entities:
-  - ipAddress: "10.0.10.2"
-ipEndpoints:
-  - gtpuPeer: "10.0.10.3"
-    teid: 1
-    laddr: "10.0.10.2"
+gtpu-entities:
+  - "10.0.10.2"
+pfcp-sessions:
+  - pdrs:
+      - id: 1
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+        farid: 1
+    fars:
+      - id: 1
+        forwardingParameters:
+          destinationInterface: "Core"
+          outerHeaderCreation:
+            teid: 1
+            gtpuPeer: "10.0.10.3"
