--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -2,6 +2,9 @@ gtpu-entities:
   - "10.0.10.3" 
   - "10.0.20.3" 
   - "10.0.30.3" 
+dnn_list:
+  - dnn: "sliceA"
+    cidr: "10.0.200.0/24"
 pfcp-sessions:
   - pdrs:
       - id: 1
