--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -18,6 +18,19 @@ pfcp-sessions:
           description: 0
           extensionHeaderDeletion: 0
         farid: 1
+      - id: 3
+        precedence: 254
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from 10.0.200.1 to 10.0.40.0/24"
+          fteid:
+            teid: 1
+            ipAddress: "10.0.10.3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 1
       - id: 2
         precedence: 255
         pdi:
