--- a/config/ran2.yaml
+++ b/config/ran2.yaml
@@ -1,13 +1,17 @@
 gtpu-entities:
   - "10.0.10.4"
+  - "fd00:d0cc:e700:1111:1::4"
 simulate-ran:
-  ran: "10.0.200.2/24"
-pfcp-sessions:
+  ipv4: "10.0.200.2/24"
+  ipv6: "fd00:d0cc:e700:2222:1::2/80"
+pfcp-sessions: 
   - pdrs:
       - id: 1
         precedence: 255
         pdi:
           sourceInterface: "Access"
+          ue-ip-address:
+            ip-address: "10.0.200.2"
         farid: 1
       - id: 2
         precedence: 255
@@ -20,6 +24,24 @@ pfcp-sessions:
         outerHeaderRemoval:
           description: 0
           extensionHeaderDeletion: 0
+      - id: 61
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::2"
+        farid: 61
+      - id: 62
+        precedence: 255
+        pdi:
+          sourceInterface: "Core"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:1::4"
+        farid: 62
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
     fars:
       - id: 1
         forwardingParameters:
@@ -28,5 +50,14 @@ pfcp-sessions:
             teid: 2
             gtpuPeer: "10.0.10.3"
       - id: 2
+        forwardingParameters:
+          destinationInterface: "Access"
+      - id: 61
+        forwardingParameters:
+          destinationInterface: "Core"
+          outerHeaderCreation:
+            teid: 62
+            gtpuPeer: "fd00:d0cc:e700:1111:1::3"
+      - id: 62
         forwardingParameters:
           destinationInterface: "Access"
