--- a/config/upf1.yaml
+++ b/config/upf1.yaml
@@ -1,10 +1,13 @@
 gtpu-entities:
   - "10.0.10.3" 
   - "10.0.20.3" 
-  - "10.0.30.3" 
+  - "fd00:d0cc:e700:1111:1::3"
+  - "fd00:d0cc:e700:1111:2::3"
 dnn_list:
   - dnn: "sliceA"
     cidr: "10.0.200.0/24"
+  - dnn: "sliceA"
+    cidr: "fd00:d0cc:e700:2222:1::/80"
 pfcp-sessions:
   - pdrs: 
       - id: 1 # To C-DN
@@ -121,6 +124,121 @@ pfcp-sessions:
             ip-address: "10.0.200.2"
           sourceInterface: "SGi-LAN/N6-LAN"
         farid: 5
+      #ipv6
+      - id: 61 # To C-DN
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+          fteid:
+            teid: 61
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 61
+      - id: 62 # To I-DN
+        precedence: 254
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fd00:d0cc:e700:2222:1::1 to fd00:d0cc:e700:1111:5::/80"
+          fteid:
+            teid: 61
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 62
+      - id: 63 # To I-DN
+        precedence: 254
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fd00:d0cc:e700:2222:1::1 to fd00:d0cc:e700:2222:1::/80"
+          fteid:
+            teid: 61
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 62
+      - id: 64 # From C-DN
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::1"
+          sourceInterface: "Core"
+          fteid:
+            teid: 61
+            ipAddress: "fd00:d0cc:e700:2222:2::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 63
+      - id: 65 # From I-DN
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::1"
+          sourceInterface: "SGi-LAN/N6-LAN"
+        farid: 63
+      - id: 66 # To C-DN
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 64
+      - id: 67 # To I-DN
+        precedence: 254
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fd00:d0cc:e700:2222:1::2 to fd00:d0cc:e700:1111:5::/80"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 62
+      - id: 68 # To I-DN
+        precedence: 254
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fd00:d0cc:e700:2222:1::2 to fd00:d0cc:e700:2222:1::/80"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:1::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 62
+      - id: 69 # From C-DN
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::2"
+          sourceInterface: "Core"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:2::3"
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+        farid: 65
+      - id: 65 # From I-DN
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::2"
+          sourceInterface: "SGi-LAN/N6-LAN"
+        farid: 5
     fars:
       - id: 1
         forwardingParameters:
@@ -149,3 +267,30 @@ pfcp-sessions:
           outerHeaderCreation:
             teid: 2
             gtpuPeer: "10.0.10.4"
+      - id: 61
+        forwardingParameters:
+          destinationInterface: "Core"
+          outerHeaderCreation:
+            teid: 61
+            gtpuPeer: "fd00:d0cc:e700:1111:2::2"
+      - id: 62
+        forwardingParameters:
+          destinationInterface: "SGi-LAN/N6-LAN"
+      - id: 63
+        forwardingParameters:
+          destinationInterface: "Access"
+          outerHeaderCreation:
+            teid: 61
+            gtpuPeer: "fd00:d0cc:e700:1111:1::2"
+      - id: 64
+        forwardingParameters:
+          destinationInterface: "Core"
+          outerHeaderCreation:
+            teid: 62
+            gtpuPeer: "fd00:d0cc:e700:1111:2::2"
+      - id: 65
+        forwardingParameters:
+          destinationInterface: "Access"
+          outerHeaderCreation:
+            teid: 62
+            gtpuPeer: "fd00:d0cc:e700:1111:1::4"
