--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -1,8 +1,11 @@
 gtpu-entities:
   - "10.0.20.2"
+  - "fd00:d0cc:e700:1111:2::2"
 dnn_list:
   - dnn: "sliceA"
     cidr: "10.0.200.0/24"
+  - dnn: "sliceA"
+    cidr: "fd00:d0cc:e700:2222:1::/80"
 pfcp-sessions:
   - pdrs:
       - id: 1
@@ -41,6 +44,42 @@ pfcp-sessions:
             ip-address: "10.0.200.2"
           sourceInterface: "Core"
         farid: 3
+      - id: 61
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+          fteid:
+            teid: 61
+            ipAddress: "fd00:d0cc:e700:1111:2::2"
+        farid: 61
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+      - id: 62
+        precedence: 255
+        pdi:
+          sourceInterface: "Access"
+          fteid:
+            teid: 62
+            ipAddress: "fd00:d0cc:e700:1111:2::2"
+        farid: 61
+        outerHeaderRemoval:
+          description: 0
+          extensionHeaderDeletion: 0
+      - id: 63
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::1"
+          sourceInterface: "Core"
+        farid: 62
+      - id: 64
+        precedence: 255
+        pdi:
+          ue-ip-address:
+            ip-address: "fd00:d0cc:e700:2222:1::2"
+          sourceInterface: "Core"
+        farid: 63
 
     fars:
       - id: 1
@@ -58,4 +97,19 @@ pfcp-sessions:
           outerHeaderCreation:
             teid: 2
             gtpuPeer: "10.0.20.3"
+      - id: 61
+        forwardingParameters:
+          destinationInterface: "Core"
+      - id: 62
+        forwardingParameters:
+          destinationInterface: "Access"
+          outerHeaderCreation:
+            teid: 61
+            gtpuPeer: "fd00:d0cc:e700:1111:2::3"
+      - id: 63
+        forwardingParameters:
+          destinationInterface: "Access"
+          outerHeaderCreation:
+            teid: 62
+            gtpuPeer: "fd00:d0cc:e700:1111:2::3"
 
