--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     networks:
       net1:
         ipv4_address: 10.0.10.2
@@ -30,6 +32,8 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     networks:
       net1:
         ipv4_address: 10.0.10.4
@@ -47,6 +51,9 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
+      - net.ipv6.conf.all.forwarding=1
     networks:
       net1:
         ipv4_address: 10.0.10.3
@@ -70,6 +77,9 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
+      - net.ipv6.conf.all.forwarding=1
     networks:
       net2:
         ipv4_address: 10.0.20.2
@@ -90,6 +100,8 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     networks:
       dn1:
         ipv4_address: 10.0.40.2
@@ -107,6 +119,8 @@ services:
       - "/dev/net/tun"
     volumes:
       - .:/volume
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=0
     networks:
       dn2:
         ipv4_address: 10.0.50.2
