--- a/config/ran2.yaml
+++ b/config/ran2.yaml
@@ -42,22 +42,40 @@ pfcp-sessions:
         outerHeaderRemoval:
           description: 0
           extensionHeaderDeletion: 0
+      - id: 99
+        precedence: 200
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fe80::/10 to any"
+        farid: 99
     fars:
       - id: 1
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 2
             gtpuPeer: "10.0.10.3"
       - id: 2
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
       - id: 61
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 62
             gtpuPeer: "fd00:d0cc:e700:1111:1::3"
       - id: 62
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
+      - id: 99
+        applyAction:
+          action: "Drop"
