--- a/config/upf1.yaml
+++ b/config/upf1.yaml
@@ -239,58 +239,88 @@ pfcp-sessions:
             ip-address: "fd00:d0cc:e700:2222:1::2"
           sourceInterface: "SGi-LAN/N6-LAN"
         farid: 5
+      - id: 99
+        precedence: 200
+        pdi:
+          sourceInterface: "Access"
+          sdf-filter:
+            description: "permit out ip from fe80::/10 to any"
+        farid: 99
     fars:
       - id: 1
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 1
             gtpuPeer: "10.0.20.2"
       - id: 2
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "SGi-LAN/N6-LAN"
       - id: 3
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
           outerHeaderCreation:
             teid: 1
             gtpuPeer: "10.0.10.2"
       - id: 4
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 2
             gtpuPeer: "10.0.20.2"
       - id: 5
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
           outerHeaderCreation:
             teid: 2
             gtpuPeer: "10.0.10.4"
       - id: 61
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 61
             gtpuPeer: "fd00:d0cc:e700:1111:2::2"
       - id: 62
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "SGi-LAN/N6-LAN"
       - id: 63
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
           outerHeaderCreation:
             teid: 61
             gtpuPeer: "fd00:d0cc:e700:1111:1::2"
       - id: 64
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Core"
           outerHeaderCreation:
             teid: 62
             gtpuPeer: "fd00:d0cc:e700:1111:2::2"
       - id: 65
+        applyAction:
+          action: "Forward"
         forwardingParameters:
           destinationInterface: "Access"
           outerHeaderCreation:
             teid: 62
             gtpuPeer: "fd00:d0cc:e700:1111:1::4"
+      - id: 99
+        applyAction:
+          action: "Drop"
