--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,7 @@ services:
     hostname: ran-1
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
@@ -24,6 +25,7 @@ services:
     hostname: ran-2
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
@@ -43,6 +45,7 @@ services:
     hostname: upf-1 
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
@@ -69,6 +72,7 @@ services:
     hostname: upf-2
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
@@ -92,6 +96,7 @@ services:
     hostname: target-1
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
@@ -111,6 +116,7 @@ services:
     hostname: target-2
     build:
       context: ./dockertest
+    working_dir: /volume
     image: deb-test-gtp 
     command: sleep infinity
     cap_add:
