Modify config to be more compatible with Free5GC
Close #30

--- a/config/upf1.yaml
+++ b/config/upf1.yaml
@@ -1,328 +1,16 @@
-pfcp-address: "10.0.60.3"
-tun-interface: upf
-gtpu-entities:
-  - "10.0.10.3"
-  - "10.0.20.3"
-#  - "fd00:d0cc:e700:1111:1::3"
-#  - "fd00:d0cc:e700:1111:2::3"
-dnn_list:
+pfcp:
+  addr: "10.0.60.3"
+  nodeID: "10.0.60.3"
+  retransTimeout: 1s
+  maxRetrans: 3
+gtpu:
+  forwarder: "wmnsk/go-gtp"
+  tunInterfaceName: gnb
+  ifList:
+    - addr: "10.0.10.3"
+      type: N3
+    - addr: "10.0.20.3"
+      type: N9
+dnnList:
   - dnn: "sliceA"
     cidr: "10.0.200.0/24"
-#  - dnn: "sliceA"
-#    cidr: "fd00:d0cc:e700:2222:1::/80"
-#pfcp-sessions:
-#  - pdrs:
-#      - id: 1 # To C-DN
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 1
-#      - id: 2 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from 10.0.200.1 to 10.0.50.0/24"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 2
-#      - id: 3 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from 10.0.200.1 to 10.0.200.0/24"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 2
-#      - id: 4 # From C-DN
-#        precedence: 254
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.1"
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.20.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 3
-#      - id: 5 # From I-DN
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.1"
-#          sourceInterface: "SGi-LAN/N6-LAN"
-#        farid: 3
-#      - id: 6 # To C-DN
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 2
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 4
-#      - id: 7 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from 10.0.200.2 to 10.0.50.0/24"
-#          fteid:
-#            teid: 2
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 2
-#      - id: 8 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from 10.0.200.2 to 10.0.200.0/24"
-#          fteid:
-#            teid: 2
-#            ipAddress: "10.0.10.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 2
-#      - id: 9 # From C-DN
-#        precedence: 254
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.2"
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 2
-#            ipAddress: "10.0.20.3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 5
-#      - id: 5 # From I-DN
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.2"
-#          sourceInterface: "SGi-LAN/N6-LAN"
-#        farid: 5
-#      #ipv6
-#      - id: 61 # To C-DN
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 61
-#      - id: 62 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fd00:d0cc:e700:2222:1::1 to fd00:d0cc:e700:1111:5::/80"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 62
-#      - id: 63 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fd00:d0cc:e700:2222:1::1 to fd00:d0cc:e700:2222:1::/80"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 62
-#      - id: 64 # From C-DN
-#        precedence: 254
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::1"
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:2222:2::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 63
-#      - id: 65 # From I-DN
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::1"
-#          sourceInterface: "SGi-LAN/N6-LAN"
-#        farid: 63
-#      - id: 66 # To C-DN
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 62
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 64
-#      - id: 67 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fd00:d0cc:e700:2222:1::2 to fd00:d0cc:e700:1111:5::/80"
-#          fteid:
-#            teid: 62
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 62
-#      - id: 68 # To I-DN
-#        precedence: 254
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fd00:d0cc:e700:2222:1::2 to fd00:d0cc:e700:2222:1::/80"
-#          fteid:
-#            teid: 62
-#            ipAddress: "fd00:d0cc:e700:1111:1::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 62
-#      - id: 69 # From C-DN
-#        precedence: 254
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::2"
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 62
-#            ipAddress: "fd00:d0cc:e700:1111:2::3"
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#        farid: 65
-#      - id: 65 # From I-DN
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::2"
-#          sourceInterface: "SGi-LAN/N6-LAN"
-#        farid: 65
-#      - id: 99
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fe80::/10 to any"
-#        farid: 99
-#    fars:
-#      - id: 1
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 1
-#            gtpuPeer: "10.0.20.2"
-#      - id: 2
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "SGi-LAN/N6-LAN"
-#      - id: 3
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 1
-#            gtpuPeer: "10.0.10.2"
-#      - id: 4
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 2
-#            gtpuPeer: "10.0.20.2"
-#      - id: 5
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 2
-#            gtpuPeer: "10.0.10.4"
-#      - id: 61
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 61
-#            gtpuPeer: "fd00:d0cc:e700:1111:2::2"
-#      - id: 62
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "SGi-LAN/N6-LAN"
-#      - id: 63
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 61
-#            gtpuPeer: "fd00:d0cc:e700:1111:1::2"
-#      - id: 64
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 62
-#            gtpuPeer: "fd00:d0cc:e700:1111:2::2"
-#      - id: 65
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 62
-#            gtpuPeer: "fd00:d0cc:e700:1111:1::4"
-#      - id: 99
-#        applyAction:
-#          action: "Drop"
