--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -1,139 +1,14 @@
-pfcp-address: "10.0.60.4"
-tun-interface: upf
-gtpu-entities:
-  - "10.0.20.2"
-#  - "fd00:d0cc:e700:1111:2::2"
-dnn_list:
+pfcp:
+  addr: "10.0.60.4"
+  nodeID: "10.0.60.4"
+  retransTimeout: 1s
+  maxRetrans: 3
+gtpu:
+  forwarder: "wmnsk/go-gtp"
+  tunInterfaceName: gnb
+  ifList:
+    - addr: "10.0.20.2"
+      type: N9
+dnnList:
   - dnn: "sliceA"
     cidr: "10.0.200.0/24"
-#  - dnn: "sliceA"
-#    cidr: "fd00:d0cc:e700:2222:1::/80"
-#pfcp-sessions:
-#  - pdrs:
-#      - id: 1
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.20.2"
-#        farid: 1
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 2
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 2
-#            ipAddress: "10.0.20.2"
-#        farid: 1
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 3
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.1"
-#          sourceInterface: "Core"
-#        farid: 2
-#      - id: 4
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "10.0.200.2"
-#          sourceInterface: "Core"
-#        farid: 3
-#      - id: 61
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:1111:2::2"
-#        farid: 61
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 62
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          fteid:
-#            teid: 62
-#            ipAddress: "fd00:d0cc:e700:1111:2::2"
-#        farid: 61
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 63
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::1"
-#          sourceInterface: "Core"
-#        farid: 62
-#      - id: 64
-#        precedence: 255
-#        pdi:
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::2"
-#          sourceInterface: "Core"
-#        farid: 63
-#      - id: 99
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fe80::/10 to any"
-#        farid: 99
-#
-#    fars:
-#      - id: 1
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#      - id: 2
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 1
-#            gtpuPeer: "10.0.20.3"
-#      - id: 3
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 2
-#            gtpuPeer: "10.0.20.3"
-#      - id: 61
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#      - id: 62
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 61
-#            gtpuPeer: "fd00:d0cc:e700:1111:2::3"
-#      - id: 63
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#          outerHeaderCreation:
-#            teid: 62
-#            gtpuPeer: "fd00:d0cc:e700:1111:2::3"
-#      - id: 99
-#        applyAction:
-#          action: "Drop"
-#
