--- a/config/ran1.yaml
+++ b/config/ran1.yaml
@@ -1,85 +1,11 @@
-pfcp-address: "10.0.60.5"
-tun-interface: gnb
-gtpu-entities:
-  - "10.0.10.2"
-#  - "fd00:d0cc:e700:1111:1::2"
-simulate-ran:
-  ipv4: "10.0.200.1/24"
-  ipv6: ""
-#  ipv6: "fd00:d0cc:e700:2222:1::1/80"
-#pfcp-sessions:
-#  - pdrs:
-#      - id: 1
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          ue-ip-address:
-#            ip-address: "10.0.200.1"
-#        farid: 1
-#      - id: 2
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 1
-#            ipAddress: "10.0.10.2"
-#        farid: 2
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 61
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          ue-ip-address:
-#            ip-address: "fd00:d0cc:e700:2222:1::1"
-#        farid: 61
-#      - id: 62
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Core"
-#          fteid:
-#            teid: 61
-#            ipAddress: "fd00:d0cc:e700:1111:1::2"
-#        farid: 62
-#        outerHeaderRemoval:
-#          description: 0
-#          extensionHeaderDeletion: 0
-#      - id: 99
-#        precedence: 255
-#        pdi:
-#          sourceInterface: "Access"
-#          sdf-filter:
-#            description: "permit out ip from fe80::/10 to any"
-#        farid: 99
-
-#    fars:
-#      - id: 1
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 1
-#            gtpuPeer: "10.0.10.3"
-#      - id: 2
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#      - id: 61
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Core"
-#          outerHeaderCreation:
-#            teid: 61
-#            gtpuPeer: "fd00:d0cc:e700:1111:1::3"
-#      - id: 62
-#        applyAction:
-#          action: "Forward"
-#        forwardingParameters:
-#          destinationInterface: "Access"
-#      - id: 99
-#        applyAction:
-#          action: "Drop"
+pfcp:
+  addr: "10.0.60.5"
+  nodeID: "10.0.60.5"
+  retransTimeout: 1s
+  maxRetrans: 3
+gtpu:
+  forwarder: "wmnsk/go-gtp"
+  tunInterfaceName: gnb
+  ifList:
+    - addr: "10.0.10.2"
+      type: N3
