--- a/config/upf2.yaml
+++ b/config/upf2.yaml
@@ -5,7 +5,7 @@ pfcp:
   maxRetrans: 3
 gtpu:
   forwarder: "wmnsk/go-gtp"
-  tunInterfaceName: gnb
+  tunInterfaceName: upf
   ifList:
     - addr: "10.0.20.2"
       type: N9
